kubernetes/apps/kasm/kasm/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kasm
  namespace: kasm
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
    - name: external
      namespace: network
      sectionName: http
  hostnames:
    - kasm.whoverse.dev
    - kasm.whoverse.nexus
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kasm-proxy-default
          port: 8080
